LuBox/GeneratedParserBase/NuParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Development\LuBox\LuBox.Parser\Nu.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace LuBox.Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class NuParser : Parser {
	public const int
		T__50=1, T__49=2, T__48=3, T__47=4, T__46=5, T__45=6, T__44=7, T__43=8, 
		T__42=9, T__41=10, T__40=11, T__39=12, T__38=13, T__37=14, T__36=15, T__35=16, 
		T__34=17, T__33=18, T__32=19, T__31=20, T__30=21, T__29=22, T__28=23, 
		T__27=24, T__26=25, T__25=26, T__24=27, T__23=28, T__22=29, T__21=30, 
		T__20=31, T__19=32, T__18=33, T__17=34, T__16=35, T__15=36, T__14=37, 
		T__13=38, T__12=39, T__11=40, T__10=41, T__9=42, T__8=43, T__7=44, T__6=45, 
		T__5=46, T__4=47, T__3=48, T__2=49, T__1=50, T__0=51, NAME=52, NORMALSTRING=53, 
		CHARSTRING=54, LONGSTRING=55, INT=56, HEX=57, FLOAT=58, HEX_FLOAT=59, 
		COMMENT=60, LINE_COMMENT=61, WS=62, SHEBANG=63;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'local'", "'*'", "'or'", "'['", "'<'", "'false'", "'<='", 
		"'nil'", "'}'", "'do'", "'%'", "')'", "'::'", "'='", "'goto'", "'repeat'", 
		"'..'", "']'", "'in'", "','", "'-'", "'while'", "'not'", "'('", "':'", 
		"'if'", "'until'", "'~='", "'{'", "'...'", "'and'", "'break'", "'else'", 
		"'true'", "'elseif'", "'?:'", "'^'", "'function'", "'.'", "'+'", "'?.'", 
		"'for'", "'return'", "';'", "'>'", "'then'", "'/'", "'=='", "'#'", "'>='", 
		"'end'", "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", 
		"FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", "SHEBANG"
	};
	public const int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_retstat = 3, RULE_label = 4, 
		RULE_funcname = 5, RULE_varlist = 6, RULE_namelist = 7, RULE_explist = 8, 
		RULE_exp = 9, RULE_var = 10, RULE_prefixexp = 11, RULE_functioncall = 12, 
		RULE_varOrExp = 13, RULE_nameAndArgs = 14, RULE_varSuffix = 15, RULE_args = 16, 
		RULE_functiondef = 17, RULE_funcbody = 18, RULE_parlist = 19, RULE_tableconstructor = 20, 
		RULE_fieldlist = 21, RULE_field = 22, RULE_fieldsep = 23, RULE_operatorOr = 24, 
		RULE_operatorAnd = 25, RULE_operatorComparison = 26, RULE_operatorStrcat = 27, 
		RULE_operatorAddSub = 28, RULE_operatorMulDivMod = 29, RULE_operatorUnary = 30, 
		RULE_operatorPower = 31, RULE_dotOrQuestionMarkDot = 32, RULE_colonOrQuestionMarkColon = 33, 
		RULE_number = 34, RULE_string = 35;
	public static readonly string[] ruleNames = {
		"chunk", "block", "stat", "retstat", "label", "funcname", "varlist", "namelist", 
		"explist", "exp", "var", "prefixexp", "functioncall", "varOrExp", "nameAndArgs", 
		"varSuffix", "args", "functiondef", "funcbody", "parlist", "tableconstructor", 
		"fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
		"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorUnary", 
		"operatorPower", "dotOrQuestionMarkDot", "colonOrQuestionMarkColon", "number", 
		"string"
	};

	public override string GrammarFileName { get { return "Nu.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public NuParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ChunkContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(NuParser.Eof, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		 {
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitChunk(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; block();
			State = 73; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public IReadOnlyList<StatContext> stat() {
			return GetRuleContexts<StatContext>();
		}
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__50) | (1L << T__41) | (1L << T__38) | (1L << T__36) | (1L << T__35) | (1L << T__29) | (1L << T__27) | (1L << T__25) | (1L << T__19) | (1L << T__13) | (1L << T__9) | (1L << T__7) | (1L << NAME))) != 0)) {
				{
				{
				State = 75; stat();
				}
				}
				State = 80;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 82;
			_la = _input.La(1);
			if (_la==T__8) {
				{
				State = 81; retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public NamelistContext namelist() {
			return GetRuleContext<NamelistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public VarlistContext varlist() {
			return GetRuleContext<VarlistContext>(0);
		}
		public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		public IReadOnlyList<ExpContext> exp() {
			return GetRuleContexts<ExpContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public ITerminalNode NAME() { return GetToken(NuParser.NAME, 0); }
		public FuncbodyContext funcbody() {
			return GetRuleContext<FuncbodyContext>(0);
		}
		public FuncnameContext funcname() {
			return GetRuleContext<FuncnameContext>(0);
		}
		public IReadOnlyList<BlockContext> block() {
			return GetRuleContexts<BlockContext>();
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			State = 165;
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; Match(T__7);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85; varlist();
				State = 86; Match(T__37);
				State = 87; explist();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 89; functioncall();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 90; label();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 91; Match(T__19);
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 92; Match(T__36);
				State = 93; Match(NAME);
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 94; Match(T__41);
				State = 95; block();
				State = 96; Match(T__0);
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 98; Match(T__29);
				State = 99; exp(0);
				State = 100; Match(T__41);
				State = 101; block();
				State = 102; Match(T__0);
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 104; Match(T__35);
				State = 105; block();
				State = 106; Match(T__24);
				State = 107; exp(0);
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 109; Match(T__25);
				State = 110; exp(0);
				State = 111; Match(T__5);
				State = 112; block();
				State = 120;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__16) {
					{
					{
					State = 113; Match(T__16);
					State = 114; exp(0);
					State = 115; Match(T__5);
					State = 116; block();
					}
					}
					State = 122;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 125;
				_la = _input.La(1);
				if (_la==T__18) {
					{
					State = 123; Match(T__18);
					State = 124; block();
					}
				}

				State = 127; Match(T__0);
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 129; Match(T__9);
				State = 130; Match(NAME);
				State = 131; Match(T__37);
				State = 132; exp(0);
				State = 133; Match(T__31);
				State = 134; exp(0);
				State = 137;
				_la = _input.La(1);
				if (_la==T__31) {
					{
					State = 135; Match(T__31);
					State = 136; exp(0);
					}
				}

				State = 139; Match(T__41);
				State = 140; block();
				State = 141; Match(T__0);
				}
				break;

			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 143; Match(T__9);
				State = 144; namelist();
				State = 145; Match(T__32);
				State = 146; explist();
				State = 147; Match(T__41);
				State = 148; block();
				State = 149; Match(T__0);
				}
				break;

			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 151; Match(T__13);
				State = 152; funcname();
				State = 153; funcbody();
				}
				break;

			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 155; Match(T__50);
				State = 156; Match(T__13);
				State = 157; Match(NAME);
				State = 158; funcbody();
				}
				break;

			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 159; Match(T__50);
				State = 160; namelist();
				State = 163;
				_la = _input.La(1);
				if (_la==T__37) {
					{
					State = 161; Match(T__37);
					State = 162; explist();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RetstatContext : ParserRuleContext {
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public RetstatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_retstat; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterRetstat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitRetstat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRetstat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RetstatContext retstat() {
		RetstatContext _localctx = new RetstatContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_retstat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167; Match(T__8);
			State = 169;
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__45) | (1L << T__43) | (1L << T__30) | (1L << T__28) | (1L << T__27) | (1L << T__22) | (1L << T__21) | (1L << T__17) | (1L << T__13) | (1L << T__2) | (1L << NAME) | (1L << NORMALSTRING) | (1L << CHARSTRING) | (1L << LONGSTRING) | (1L << INT) | (1L << HEX) | (1L << FLOAT) | (1L << HEX_FLOAT))) != 0)) {
				{
				State = 168; explist();
				}
			}

			State = 172;
			_la = _input.La(1);
			if (_la==T__7) {
				{
				State = 171; Match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(NuParser.NAME, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174; Match(T__38);
			State = 175; Match(NAME);
			State = 176; Match(T__38);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncnameContext : ParserRuleContext {
		public ITerminalNode NAME(int i) {
			return GetToken(NuParser.NAME, i);
		}
		public IReadOnlyList<ITerminalNode> NAME() { return GetTokens(NuParser.NAME); }
		public FuncnameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcname; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterFuncname(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitFuncname(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncname(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncnameContext funcname() {
		FuncnameContext _localctx = new FuncnameContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_funcname);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 178; Match(NAME);
			State = 183;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__12) {
				{
				{
				State = 179; Match(T__12);
				State = 180; Match(NAME);
				}
				}
				State = 185;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 188;
			_la = _input.La(1);
			if (_la==T__26) {
				{
				State = 186; Match(T__26);
				State = 187; Match(NAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarlistContext : ParserRuleContext {
		public VarContext var(int i) {
			return GetRuleContext<VarContext>(i);
		}
		public IReadOnlyList<VarContext> var() {
			return GetRuleContexts<VarContext>();
		}
		public VarlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterVarlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitVarlist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarlistContext varlist() {
		VarlistContext _localctx = new VarlistContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_varlist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 190; var();
			State = 195;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__31) {
				{
				{
				State = 191; Match(T__31);
				State = 192; var();
				}
				}
				State = 197;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamelistContext : ParserRuleContext {
		public ITerminalNode NAME(int i) {
			return GetToken(NuParser.NAME, i);
		}
		public IReadOnlyList<ITerminalNode> NAME() { return GetTokens(NuParser.NAME); }
		public NamelistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namelist; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterNamelist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitNamelist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamelist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamelistContext namelist() {
		NamelistContext _localctx = new NamelistContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_namelist);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 198; Match(NAME);
			State = 203;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 199; Match(T__31);
					State = 200; Match(NAME);
					}
					} 
				}
				State = 205;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExplistContext : ParserRuleContext {
		public IReadOnlyList<ExpContext> exp() {
			return GetRuleContexts<ExpContext>();
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public ExplistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_explist; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterExplist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitExplist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExplist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExplistContext explist() {
		ExplistContext _localctx = new ExplistContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_explist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 206; exp(0);
			State = 211;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__31) {
				{
				{
				State = 207; Match(T__31);
				State = 208; exp(0);
				}
				}
				State = 213;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
